# txtpic

./: Cargo.toml  LICENSE  readme.md
example/: cat.txt
src/: calculate_string_brightness.rs  lib.rs  main.rs
src/character_set/: calculate_character_brightness.rs  character_set.rs  mod.rs
src/text_image/: image_to_text.rs  mod.rs  text_image.rs
