[package]
name = "txtpic"
version = "1.0.0"
authors = ["Jeremy Dormitzer <jeremy.dormitzer@gmail.com>"]
description = "Generate Unicode art from images"
license = "MIT"

[lib]
name = "txtpic_lib"
path = "src/lib.rs"

[[bin]]
name = "txtpic"
path = "src/main.rs"

[dependencies]
bmp = "*"
image = "*"
rusttype = "*"
clap = "*"
