[package]
name = "txtpic"
version = "1.0.1"
authors = ["Jeremy Dormitzer <jeremy.dormitzer@gmail.com>"]
description = "Generate Unicode art from images"
repository = "https://github.com/jdormit/txtpic"
license = "MIT"

[lib]
name = "txtpic_lib"
path = "src/lib.rs"

[[bin]]
name = "txtpic"
path = "src/main.rs"

[dependencies]
bmp = "0.2.0"
image = "0.12.3"
rusttype = "0.2.1"
clap = "2.22.2"
